smtp4dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smtp4dev-ingress
  namespace: portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: smtp4dev.51.178.94.25.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smtp4dev
                port:
                  number: 80
